[gd_scene load_steps=66 format=3 uid="uid://dt6pxj6iq5qm7"]

[ext_resource type="Script" path="res://chars/player1.gd" id="1_vtw8a"]
[ext_resource type="Texture2D" uid="uid://dooc6gyko8i0g" path="res://assets/sprites/kat.png" id="2_ypp65"]
[ext_resource type="Texture2D" uid="uid://dqm3qlalkmst8" path="res://assets/sprites/shockwave.png" id="3_1dw55"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_e3wlk"]
radius = 4.0
height = 12.0

[sub_resource type="Animation" id="Animation_q2c0v"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeleeHitbox/CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2(0, 7)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MeleeHitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_up8ko"]
resource_name = "alt_down"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [28]
}

[sub_resource type="Animation" id="Animation_fqk0r"]
resource_name = "alt_left"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [30]
}

[sub_resource type="Animation" id="Animation_h15e0"]
resource_name = "alt_right"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [31]
}

[sub_resource type="Animation" id="Animation_ttoj8"]
resource_name = "alt_up"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [29]
}

[sub_resource type="Animation" id="Animation_bc340"]
resource_name = "attack_down"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeleeHitbox/CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2(0, 16)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MeleeHitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_6tpyk"]
resource_name = "attack_left"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [20, 21, 22, 23]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeleeHitbox/CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2(-11, 7)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MeleeHitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_j21pp"]
resource_name = "attack_right"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeleeHitbox/CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2(11, 7)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MeleeHitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_ulrne"]
resource_name = "attack_up"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeleeHitbox/CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2(0, -3)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MeleeHitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_y5nes"]
resource_name = "idle_down"
length = 0.001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_04xl5"]
resource_name = "idle_left"
length = 0.001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}

[sub_resource type="Animation" id="Animation_obncx"]
resource_name = "idle_right"
length = 0.001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [9]
}

[sub_resource type="Animation" id="Animation_hcr8r"]
resource_name = "idle_up"
length = 0.001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}

[sub_resource type="Animation" id="Animation_44r4a"]
resource_name = "move_down"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [1, 0, 2, 0]
}

[sub_resource type="Animation" id="Animation_a2sfh"]
resource_name = "move_left"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [7, 6, 8, 6]
}

[sub_resource type="Animation" id="Animation_vpsee"]
resource_name = "move_right"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [10, 9, 11, 9]
}

[sub_resource type="Animation" id="Animation_j6eup"]
resource_name = "move_up"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 3, 5, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_blhrr"]
_data = {
"RESET": SubResource("Animation_q2c0v"),
"alt_down": SubResource("Animation_up8ko"),
"alt_left": SubResource("Animation_fqk0r"),
"alt_right": SubResource("Animation_h15e0"),
"alt_up": SubResource("Animation_ttoj8"),
"attack_down": SubResource("Animation_bc340"),
"attack_left": SubResource("Animation_6tpyk"),
"attack_right": SubResource("Animation_j21pp"),
"attack_up": SubResource("Animation_ulrne"),
"idle_down": SubResource("Animation_y5nes"),
"idle_left": SubResource("Animation_04xl5"),
"idle_right": SubResource("Animation_obncx"),
"idle_up": SubResource("Animation_hcr8r"),
"move_down": SubResource("Animation_44r4a"),
"move_left": SubResource("Animation_a2sfh"),
"move_right": SubResource("Animation_vpsee"),
"move_up": SubResource("Animation_j6eup")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_8p71e"]
animation = &"attack_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_st606"]
animation = &"attack_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_6a4xj"]
animation = &"attack_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_8e5eh"]
animation = &"attack_right"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_h8vqr"]
blend_point_0/node = SubResource("AnimationNodeAnimation_8p71e")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_st606")
blend_point_1/pos = Vector2(0, -1)
blend_point_2/node = SubResource("AnimationNodeAnimation_6a4xj")
blend_point_2/pos = Vector2(-1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_8e5eh")
blend_point_3/pos = Vector2(1, 0)
min_space = Vector2(-1.1, -1.1)
max_space = Vector2(1.1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_02w0l"]
animation = &"alt_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ie7mm"]
animation = &"alt_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_mtua6"]
animation = &"alt_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_iiaan"]
animation = &"alt_left"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_it8ke"]
blend_point_0/node = SubResource("AnimationNodeAnimation_02w0l")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_ie7mm")
blend_point_1/pos = Vector2(0, -1)
blend_point_2/node = SubResource("AnimationNodeAnimation_mtua6")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_iiaan")
blend_point_3/pos = Vector2(-1, 0)
min_space = Vector2(-1.1, -1.1)
max_space = Vector2(1.1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_pscng"]
animation = &"idle_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_whnhu"]
animation = &"idle_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_qdfns"]
animation = &"idle_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_dgnwy"]
animation = &"idle_down"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_1dftb"]
blend_point_0/node = SubResource("AnimationNodeAnimation_pscng")
blend_point_0/pos = Vector2(0, -1)
blend_point_1/node = SubResource("AnimationNodeAnimation_whnhu")
blend_point_1/pos = Vector2(-1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_qdfns")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_dgnwy")
blend_point_3/pos = Vector2(0, 1)
min_space = Vector2(-1.1, -1.1)
max_space = Vector2(1.1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_736yv"]
animation = &"move_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ew6wg"]
animation = &"move_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_77vv7"]
animation = &"move_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ricdt"]
animation = &"move_left"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_otswd"]
blend_point_0/node = SubResource("AnimationNodeAnimation_736yv")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_ew6wg")
blend_point_1/pos = Vector2(0, -1)
blend_point_2/node = SubResource("AnimationNodeAnimation_77vv7")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_ricdt")
blend_point_3/pos = Vector2(-1, 0)
min_space = Vector2(-1.1, -1.1)
max_space = Vector2(1.1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_8k6ly"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_l4q7o"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_oyt0g"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_onvwe"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_hkkpw"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_qwmec"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_6yb06"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_gpgm8"]
states/End/position = Vector2(903, 100)
states/attack/node = SubResource("AnimationNodeBlendSpace2D_h8vqr")
states/attack/position = Vector2(468.882, 214.709)
states/attack_alt/node = SubResource("AnimationNodeBlendSpace2D_it8ke")
states/attack_alt/position = Vector2(468.882, -12.2172)
states/idle/node = SubResource("AnimationNodeBlendSpace2D_1dftb")
states/idle/position = Vector2(404.882, 100)
states/move/node = SubResource("AnimationNodeBlendSpace2D_otswd")
states/move/position = Vector2(636.882, 100)
transitions = ["idle", "move", SubResource("AnimationNodeStateMachineTransition_8k6ly"), "Start", "idle", SubResource("AnimationNodeStateMachineTransition_l4q7o"), "move", "idle", SubResource("AnimationNodeStateMachineTransition_oyt0g"), "idle", "attack", SubResource("AnimationNodeStateMachineTransition_onvwe"), "attack", "idle", SubResource("AnimationNodeStateMachineTransition_hkkpw"), "idle", "attack_alt", SubResource("AnimationNodeStateMachineTransition_qwmec"), "attack_alt", "idle", SubResource("AnimationNodeStateMachineTransition_6yb06")]
graph_offset = Vector2(69.882, -69.2172)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r2vve"]
size = Vector2(3.57628e-07, 0)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p0ryn"]
size = Vector2(28, 28)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jjts2"]
size = Vector2(8, 8)

[sub_resource type="CircleShape2D" id="CircleShape2D_2yajf"]
radius = 22.0907

[sub_resource type="CircleShape2D" id="CircleShape2D_1g04o"]
radius = 5.0

[sub_resource type="Animation" id="Animation_84rsc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteSW:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeleeAltHitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SpriteSW:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PawpadHitbox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_e10pm"]
resource_name = "attack"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteSW:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeleeAltHitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SpriteSW:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PawpadHitbox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_r1v4n"]
resource_name = "idle"
length = 0.1
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteSW:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeleeAltHitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SpriteSW:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PawpadHitbox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rojug"]
_data = {
"RESET": SubResource("Animation_84rsc"),
"attack": SubResource("Animation_e10pm"),
"idle": SubResource("Animation_r1v4n")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_4qnxo"]
animation = &"attack"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_3mcfs"]
animation = &"idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_oal8i"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_8ce1x"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_mpn4e"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_s2ef8"]
states/attack/node = SubResource("AnimationNodeAnimation_4qnxo")
states/attack/position = Vector2(447, 101)
states/idle/node = SubResource("AnimationNodeAnimation_3mcfs")
states/idle/position = Vector2(313, 101)
transitions = ["Start", "idle", SubResource("AnimationNodeStateMachineTransition_oal8i"), "idle", "attack", SubResource("AnimationNodeStateMachineTransition_8ce1x"), "attack", "idle", SubResource("AnimationNodeStateMachineTransition_mpn4e")]

[node name="Player1" type="CharacterBody2D"]
script = ExtResource("1_vtw8a")
body_alt_hit = Array[String](["Button", "ButtonToggle", "Twig"])
speed = 450
body_hit = Array[String](["Button", "Twig", "ButtonToggle", "ButtonHard"])
bad_tiles = Array[String](["Spike", "SpikeExact", "SpikeFlame", "SpikeDual"])
no_follow_tiles = Array[String](["SpikeFrostfire", "SpikeDual"])

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_ypp65")
hframes = 32
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 7)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_e3wlk")
metadata/_edit_lock_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_blhrr")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_gpgm8")
anim_player = NodePath("../AnimationPlayer")
parameters/attack/blend_position = Vector2(0.994434, 0.0174602)
parameters/attack_alt/blend_position = Vector2(0.00127757, 0.913757)
parameters/idle/blend_position = Vector2(0, -0.0629957)
parameters/move/blend_position = Vector2(0.0464445, -0.471429)

[node name="TileDetector" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="TileDetector"]
position = Vector2(0, 9)
rotation = 1.5708
shape = SubResource("RectangleShape2D_r2vve")

[node name="PlayerDetector1" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector1"]
position = Vector2(0, 7)
shape = SubResource("RectangleShape2D_p0ryn")
metadata/_edit_lock_ = true

[node name="MeleeHitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MeleeHitbox"]
position = Vector2(0, 7)
shape = SubResource("RectangleShape2D_jjts2")
disabled = true
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="MeleeAltHitbox" type="Area2D" parent="."]
collision_layer = 15
collision_mask = 15

[node name="CollisionShape2D" type="CollisionShape2D" parent="MeleeAltHitbox"]
position = Vector2(0, 7)
shape = SubResource("CircleShape2D_2yajf")
disabled = true
metadata/_edit_lock_ = true

[node name="PawpadHitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="PawpadHitbox"]
position = Vector2(0, 7)
shape = SubResource("CircleShape2D_1g04o")
disabled = true

[node name="SpriteSW" type="Sprite2D" parent="."]
visible = false
z_index = 3
z_as_relative = false
position = Vector2(0, 7)
texture = ExtResource("3_1dw55")
hframes = 6
frame = 5

[node name="AnimationPlayerSW" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_rojug")
}

[node name="AnimationTreeSW" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_s2ef8")
anim_player = NodePath("../AnimationPlayerSW")

[node name="SwitchDelay" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[node name="AttackDelay" type="Timer" parent="."]
wait_time = 0.55
one_shot = true

[node name="SplitDelay" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="body_entered" from="TileDetector" to="." method="_on_tile_detector_body_entered"]
[connection signal="body_exited" from="TileDetector" to="." method="_on_tile_detector_body_exited"]
[connection signal="area_exited" from="PlayerDetector1" to="." method="_on_player_detector_1_area_exited"]
[connection signal="body_entered" from="PlayerDetector1" to="." method="_on_player_detector_1_body_entered"]
[connection signal="body_exited" from="PlayerDetector1" to="." method="_on_player_detector_1_body_exited"]
[connection signal="body_entered" from="MeleeHitbox" to="." method="_on_melee_hitbox_body_entered"]
[connection signal="body_entered" from="MeleeAltHitbox" to="." method="_on_melee_alt_hitbox_body_entered"]
[connection signal="body_entered" from="PawpadHitbox" to="." method="_on_pawpad_hitbox_body_entered"]
[connection signal="timeout" from="SwitchDelay" to="." method="_on_switch_delay_timeout"]
[connection signal="timeout" from="AttackDelay" to="." method="_on_attack_delay_timeout"]
[connection signal="timeout" from="SplitDelay" to="." method="_on_split_delay_timeout"]
